# home

./: .gitignore  CLAUDE.md  README.md  home.drawio  off-grid-setup.drawio  pytest.ini
apps/home-assistant/: README.md  configuration.yaml
apps/minion/: .dockerignore  Dockerfile  pyproject.toml
apps/minion/config/: default.yml
apps/minion/docs/: architecture.md  event-flow.md  github-workflow.md  package-structure.md  system-overview.md
apps/minion/src/minion/: __main__.py  api.py  claiming.py  config.py  conversation.py  events.py  main.py  store.py
apps/minion/src/minion/github/: __init__.py  config.py  implement.py  plan.py  source.py
apps/minion/src/minion/handlers/: chat.py
apps/minion/src/minion/sources/: mqtt.py
apps/minion/src/minion/tools/: __init__.py  files.py  git.py  shell.py
apps/minion/tests/: test_claiming.py  test_events.py  test_store.py  test_tools.py
docs/: SECURITY_SCAN_2026-01-10.md  docs-as-code.md
docs/adr/: 0001-home-assistant.md  0002-zigbee.md  0006-ssd.md  0009-zigbee-coordinator.md  0011-monitoring-stack.md  0011-nx.md  0012-paperclip-and-shared-postgres.md  2025-07-16-home-assistant.md  2025-07-16-manual-ansible-docker.md  2025-07-16-ssd.md  2025-07-16-ubuntu-lts.md  2025-07-16-vpn-server.md  2025-07-16-zigbee-relays.md  2025-07-16-zigbee2MQTT.md  2025-09-01-raspberry-pi.md  2026-02-12-agent-communication.md  (+1 more)
infrastructure/: rpi-setup.md
services/: .env  README.md  docker-compose.dev.yml  docker-compose.yml
sessions/: 2026-01-10-ethernet-config-and-monitoring.md  2026-02-12-autonomous-ai-agent-design.md
(+98 files in other folders)
