[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minion"
version = "0.1.0"
description = "Autonomous AI agent for home automation infrastructure"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiomqtt>=2.3.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/minion"]
